Update 'l3v4303af-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:620f002449a911fd67276b25ebd3624f23facb87@sha256:a48a252b2500c3bd09b89c08bfd28e49522a20e3a5bcd1ceed5d6a9bf25005fc

--- a/components/l3v4303af-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/l3v4303af-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: l3v4303af-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:620f002449a911fd67276b25ebd3624f23facb87@sha256:a48a252b2500c3bd09b89c08bfd28e49522a20e3a5bcd1ceed5d6a9bf25005fc
+          name: container-image
